# lolzpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
codegen/: __main__.py  generate.py  live_fixes.py  parser.py  renderer.py
codegen/schemas/: market.json
codegen/templates/: client.py.jinja2  init.py.jinja2
examples/: quickstart.py
lolz_sdk/: __init__.py  _base.py  _exceptions.py  _transport.py  _version.py
lolz_sdk/_internal/: __init__.py  base_client.py  rate_limit.py  retry.py
lolz_sdk/core/: __init__.py  config.py  exceptions.py  types.py
lolz_sdk/forum/: __init__.py  _client.py  _models.py
lolz_sdk/market/: __init__.py  _client.py  _models.py
lolzpy/: __init__.py  _version.py
lolzpy/_internal/: __init__.py  base_client.py  retry.py
lolzpy/core/: __init__.py  config.py  exceptions.py  types.py
lolzpy/forum/: __init__.py  _client.py  _models.py
lolzpy/market/: __init__.py  _client.py  _models.py
tests/: conftest.py  test_base.py  test_codegen.py  test_exceptions.py  test_facade.py  test_transport.py
tests/codegen/: conftest.py
tests/integration/: test_base_client.py  test_facade.py  test_generated_clients.py
tests/live/: conftest.py  test_forum.py  test_market.py
tests/unit/: test_exceptions.py  test_parse_response.py  test_rate_limit.py  test_request_retry.py  test_retry.py
