[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lolzpy"
version = "0.2.0"
description = "Typed Python SDK for LOLZ Forum & Market APIs (sync + async)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Andre" }]
keywords = ["lolz", "lolzteam", "zelenka", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "curl_cffi>=0.14",
    "pydantic>=2.0",
]

[project.optional-dependencies]
codegen = [
    "datamodel-code-generator==0.55.0",
    "prance>=23.6",
    "openapi-spec-validator>=0.7",
    "jinja2>=3.1",
    "ruff>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.9",
]

[project.urls]
Repository = "https://github.com/your-org/lolzpy"

[tool.hatch.build.targets.wheel]
packages = ["lolzpy"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TC"]
ignore = ["TC001", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"lolzpy/*/_models.py" = ["E501", "E741"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["lolzpy"]
exclude = ["codegen", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that call the real LOLZ API (require LOLZ_TOKEN env var)",
]
